# darkfactory-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .vscodeignore  AGENTS.md  Dockerfile  NOTICE  PRD.md  README.md  agent.package.json  docker-compose.portainer.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.codex-plugin/: plugin.json
.darkfactory/: branch-protection.md  branching-policy.md  data-repository-policy.json  enforcement-rules.json  installer-policy.json  managed-repos.json  managed-repository.json  providers.json  release-policy.json  runner-manager.md  submodule-policy.json  trigger-policy.json
.github/: kimi-worker.Dockerfile
agentos_gateway/: __init__.py  cli.py  health.py  main.py  oauth.py  pg_registry.py  quota.py  registry.py  router.py  schemas.py  task_routing.py
ci/: test-inventory.json
clis/: README.md
contracts-go/: doc.go
docs/: README.md  capabilities.md  ci-validation.md  core.md  gateway-runtime.md  gateway.md  harness.md  inference.md  managed-enforcement.md  manager.md  packages-and-environments.md  plugin-platform.md  state-memory-v2.md  state-sync.md
install/: install.sh  smoke-release.sh  smoke.sh
prompts/: AGENTS.md  README.md  manifest.json  manifest.recovery.json
registry/: active.yaml
scripts/: build-extension.mjs  check-branch-protection.mjs  check-managed-conformance.mjs  dark-factory-managed-check.mjs  dark-factory-release-check.mjs  df-audit.mjs  df-autoreview-recovery.mjs  df-fix.mjs  df-lib.mjs  df-model-policy.mjs  df-orchestrate.mjs  df-plan.mjs  df-work.mjs  (+17 more)
(+510 files in other folders)
