[project]
name = "agentos-gateway"
version = "0.1.0"
description = "Rommie LLM gateway (VS1-minimal) — OpenAI-format, local-engine routing, config-driven model registry. Salvaged + adapted from v3 legacy/src-packages-gateway."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "typer>=0.9",
  "rich>=13.0",
  "litellm>=1.0",
  "asyncpg>=0.29",
]

[project.scripts]
gateway = "agentos_gateway.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentos_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "live: requires live external services such as Postgres",
]
